welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	(a>=13)&&(a<=19)
        ^